@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-17T01:10:52Z",
+  "timestamp" : "2024-10-17T12:30:12Z",
   "count_outdated" : 2836,
   "uniques_outdated" : 900,
-  "count" : 2844,
-  "uniques" : 908,
+  "count" : 2845,
+  "uniques" : 909,
   "views" : [
     {
       "timestamp": "2024-10-04T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2024-10-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
