@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 8,
+  "count": 9,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2024-10-04T00:00:00Z",
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2024-10-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
