@@ -1,3 +1,12 @@
+2024-10-17T12:30:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11384954457 # 593
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
+* notice: last 14d: unq all: 9 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 900 2836 / 908 2844
+* notice: next accum: outdated-unq outdated-all / unq all: 900 2836 / 909 2845
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-10-17]
+
 2024-10-17T01:10:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11376486463 # 592
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
